--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,914 +1,947 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "pages/AdminAsync.fde891561b4db45cb73c.js.map",
-    "pages/AdminAsync.fde891561b4db45cb73c.js",
-    "pages/index.ba49fe4f806a423427ea.js",
-    "layouts/default.213209efa506d8995a41.js",
-    "pages/About.4d78b7fc1b05fd2fe8be.js",
-    "common.8e6c3f8c273f82049fab.js",
-    "app.67ee17092c344ec71cdb.js",
-    "manifest.f79f67298bae13d28f9d.js",
+    "pages/Admin.93a11fd698b86272b8b3.js.map",
+    "pages/Admin.93a11fd698b86272b8b3.js",
+    "layouts/default.74acac72eda0d5da0195.js",
+    "pages/About.fed67c0ad5c05c5b5dbd.js",
+    "common.edc9b3f07183a20e5cfb.js",
+    "app.8fd061ee6a50645a1de9.js",
+    "manifest.4195c36cd925e179da55.js",
     "common.2ad8fa0064d5fcf555fe8621ecf14f68.css",
     "LICENSES",
-    "pages/Admin.a37e030f3c3f354f9742.js",
-    "pages/Admin.a37e030f3c3f354f9742.js.map",
-    "pages/index.ba49fe4f806a423427ea.js.map",
-    "layouts/default.213209efa506d8995a41.js.map",
-    "pages/About.4d78b7fc1b05fd2fe8be.js.map",
-    "common.8e6c3f8c273f82049fab.js.map",
-    "app.67ee17092c344ec71cdb.js.map",
+    "pages/index.345ab8caeac79008ae3e.js",
+    "pages/index.345ab8caeac79008ae3e.js.map",
+    "layouts/default.74acac72eda0d5da0195.js.map",
+    "pages/About.fed67c0ad5c05c5b5dbd.js.map",
+    "common.edc9b3f07183a20e5cfb.js.map",
+    "app.8fd061ee6a50645a1de9.js.map",
     "common.2ad8fa0064d5fcf555fe8621ecf14f68.css.map",
-    "manifest.f79f67298bae13d28f9d.js.map",
+    "manifest.4195c36cd925e179da55.js.map",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.f79f67298bae13d28f9d.js",
-    "common.8e6c3f8c273f82049fab.js",
-    "app.67ee17092c344ec71cdb.js"
+    "manifest.4195c36cd925e179da55.js",
+    "common.edc9b3f07183a20e5cfb.js",
+    "app.8fd061ee6a50645a1de9.js"
   ],
   "async": [
-    "pages/AdminAsync.fde891561b4db45cb73c.js",
-    "pages/index.ba49fe4f806a423427ea.js",
-    "layouts/default.213209efa506d8995a41.js",
-    "pages/About.4d78b7fc1b05fd2fe8be.js",
-    "pages/Admin.a37e030f3c3f354f9742.js"
+    "pages/Admin.93a11fd698b86272b8b3.js",
+    "layouts/default.74acac72eda0d5da0195.js",
+    "pages/About.fed67c0ad5c05c5b5dbd.js",
+    "pages/index.345ab8caeac79008ae3e.js"
   ],
   "modules": {
     "34743616": [
-      5,
-      15
+      4,
+      13
     ],
     "71787424": [
-      5,
-      15
+      4,
+      13
     ],
     "c9a5df2a": [
-      5,
-      15
+      4,
+      13
+    ],
+    "929ff236": [
+      1,
+      0
+    ],
+    "5c7e4673": [
+      1,
+      0
     ],
     "cb10d370": [
-      5,
-      15
+      4,
+      13
     ],
     "5dea6790": [
-      5,
-      15
+      4,
+      13
     ],
     "8693773e": [
-      5,
-      15
+      4,
+      13
     ],
     "aca5fa7a": [
-      5,
-      15
+      4,
+      13
     ],
     "88a08fd8": [
-      2,
-      12
+      9,
+      10
     ],
     "2d74c3ea": [
-      5,
-      15
+      4,
+      13
     ],
     "37ed05fa": [
-      5,
-      15
+      4,
+      13
     ],
     "2e99d4d9": [
-      5,
-      15
+      4,
+      13
     ],
     "2dc825e8": [
-      3,
-      13
+      2,
+      11
     ],
     "a8827e0c": [
-      5,
-      15
+      4,
+      13
     ],
     "91bcd71c": [
-      2,
-      12
+      9,
+      10
     ],
     "d0c51f14": [
-      5,
-      15
+      4,
+      13
     ],
     "45b7eb92": [
-      5,
-      15
+      4,
+      13
     ],
     "645e2f7a": [
-      5,
-      15
-    ],
-    "f074f0fa": [
-      2,
-      12
+      4,
+      13
     ],
     "51c06cff": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "d2aa02c4": [
-      5,
-      15
+      4,
+      13
     ],
     "8eea9102": [
-      5,
-      15
+      4,
+      13
     ],
     "55076fc8": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "bcb70bbe": [
-      1,
-      0
+      5,
+      7,
+      14,
+      15
     ],
     "18a16dd6": [
-      5,
-      15
-    ],
-    "69b88a18": [
-      1,
-      0
+      4,
+      13
     ],
     "0b1e29b4": [
-      5,
-      15
+      4,
+      13
     ],
     "2e4edf5a": [
-      5,
-      15
+      4,
+      13
     ],
     "0625339c": [
-      5,
-      15
+      4,
+      13
+    ],
+    "255c3176": [
+      9,
+      10
+    ],
+    "9bbbeb60": [
+      1,
+      0
     ],
     "05bd1b99": [
-      5,
-      15
+      4,
+      13
     ],
     "eaa652e0": [
-      5,
-      15
+      4,
+      13
     ],
     "3ee2a62a": [
-      5,
-      15
+      4,
+      13
     ],
     "10a45c9c": [
-      5,
-      15
+      4,
+      13
     ],
     "3fa0e569": [
-      5,
-      15
+      4,
+      13
     ],
     "d29f67d2": [
-      10,
-      11
+      1,
+      0
     ],
     "d7684e34": [
-      5,
-      15
+      4,
+      13
     ],
     "64e53e12": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "106740b1": [
-      5,
-      15
+      4,
+      13
     ],
     "1369fd2f": [
-      4,
-      14
+      3,
+      12
     ],
     "ce20da44": [
-      5,
-      15
+      4,
+      13
     ],
     "a923acd0": [
-      5,
-      15
+      4,
+      13
+    ],
+    "099f05dc": [
+      1,
+      0
     ],
     "474cfc8d": [
-      5,
-      15
+      4,
+      13
     ],
     "2bafea54": [
-      5,
-      15
+      4,
+      13
     ],
     "229837bb": [
-      5,
-      15
+      4,
+      13
+    ],
+    "bd292434": [
+      1,
+      0
     ],
     "180effa0": [
-      5,
-      15
+      4,
+      13
     ],
     "9a6232ee": [
-      5,
-      15
+      4,
+      13
     ],
     "5e59e63e": [
-      5,
-      15
+      4,
+      13
     ],
     "fd0d1fe0": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "bc1c6616": [
-      5,
-      15
+      4,
+      13
     ],
     "0b6f5a36": [
-      5,
-      15
+      4,
+      13
     ],
     "4cee839d": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "3eedab15": [
-      5,
-      15
+      4,
+      13
     ],
     "52236eff": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
+    ],
+    "7aa6c412": [
+      1,
+      0
     ],
     "13e20794": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "32bdd064": [
-      5,
-      15
+      4,
+      13
     ],
     "dd2a659a": [
-      5,
-      15
+      4,
+      13
     ],
     "9e9d0166": [
-      5,
-      15
+      4,
+      13
     ],
     "7b4b049a": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "a892edc0": [
-      5,
-      15
+      4,
+      13
     ],
     "5b38d5f6": [
-      5,
-      15
+      4,
+      13
     ],
     "e0419134": [
-      5,
-      15
+      4,
+      13
     ],
     "7173bfb7": [
-      5,
-      15
+      4,
+      13
     ],
     "1e8496cc": [
-      5,
-      15
+      4,
+      13
+    ],
+    "7f97e162": [
+      9,
+      10
     ],
     "64b938ef": [
-      5,
-      15
+      4,
+      13
     ],
     "7d56f4d2": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "67afb57c": [
-      5,
-      15
+      4,
+      13
     ],
     "172d717a": [
-      5,
-      15
+      4,
+      13
     ],
     "d0d2c236": [
-      5,
-      15
+      4,
+      13
     ],
     "49785cd6": [
-      5,
-      15
+      4,
+      13
     ],
     "107d77e7": [
-      5,
-      15
+      4,
+      13
     ],
     "5e7ea45c": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "947d34f0": [
-      3,
-      13
+      2,
+      11
     ],
     "680456e0": [
-      5,
-      15
+      4,
+      13
     ],
     "2cf2d4ea": [
-      5,
-      15
+      4,
+      13
     ],
     "0df04838": [
-      5,
-      15
+      4,
+      13
     ],
     "02033b56": [
-      5,
-      15
+      4,
+      13
+    ],
+    "e36b6966": [
+      1,
+      0
     ],
     "e077cf3e": [
-      5,
-      15
+      4,
+      13
     ],
     "7c45b238": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "14f34f34": [
-      5,
-      15
+      4,
+      13
     ],
     "a73b0450": [
-      5,
-      15
+      4,
+      13
     ],
     "0482b3e4": [
-      5,
-      15
+      4,
+      13
     ],
     "f7583e16": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
+    ],
+    "562e2e12": [
+      9,
+      10
+    ],
+    "5e092e02": [
+      1,
+      0
     ],
     "fe60a9f2": [
-      5,
-      15
+      4,
+      13
     ],
     "0483c257": [
-      5,
-      15
+      4,
+      13
     ],
     "a37e642c": [
-      5,
-      15
+      4,
+      13
     ],
     "fed496f4": [
-      5,
-      15
+      4,
+      13
     ],
     "cbae1bd6": [
-      5,
-      15
+      4,
+      13
     ],
     "870ab4d8": [
-      5,
-      15
+      4,
+      13
     ],
     "26b50220": [
-      5,
-      15
+      4,
+      13
     ],
     "1ecb6ea4": [
-      5,
-      15
+      4,
+      13
     ],
     "6d8bd947": [
-      5,
-      15
+      4,
+      13
     ],
     "0f4c669a": [
-      5,
-      15
+      4,
+      13
     ],
     "2438e970": [
-      5,
-      15
+      4,
+      13
     ],
     "31467ad4": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "d8d3f89a": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "1499d10a": [
-      5,
-      15
+      4,
+      13
     ],
     "9d102996": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "2028ebc9": [
-      5,
-      15
+      4,
+      13
     ],
     "1c0379e3": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "4698d11c": [
-      5,
-      15
+      4,
+      13
     ],
     "5681189a": [
-      5,
-      15
+      4,
+      13
     ],
     "b25e5a00": [
-      5,
-      15
+      4,
+      13
     ],
     "43bdf916": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "64912bf1": [
-      10,
-      11
+      1,
+      0
     ],
     "cf22443c": [
-      5,
-      15
+      4,
+      13
     ],
     "3fd493d2": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "0a15f7a6": [
-      5,
-      15
+      4,
+      13
     ],
     "0b1b5941": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "64f3916c": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "2be03ee2": [
-      5,
-      15
+      4,
+      13
     ],
     "0e30fa5b": [
-      5,
-      15
+      4,
+      13
     ],
     "0579d661": [
-      5,
-      15
+      4,
+      13
     ],
     "a85f3f76": [
-      5,
-      15
+      4,
+      13
     ],
     "36ad6d92": [
-      5,
-      15
+      4,
+      13
     ],
     "7870e0a3": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "456916c8": [
-      5,
-      15
+      4,
+      13
     ],
     "73dd295e": [
-      5,
-      15
+      4,
+      13
     ],
     "5c01d15c": [
-      5,
-      15
+      4,
+      13
     ],
     "175a852f": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "4d926c57": [
-      5,
-      15
+      4,
+      13
     ],
     "4ebf2f56": [
-      5,
-      15
+      4,
+      13
     ],
     "4154936e": [
-      5,
-      15
+      4,
+      13
     ],
     "9fa47a64": [
-      5,
-      15
+      4,
+      13
     ],
     "87d12d60": [
-      5,
-      15
+      4,
+      13
     ],
     "7d7ac104": [
-      5,
-      15
+      4,
+      13
     ],
     "062cd7d7": [
-      5,
-      15
+      4,
+      13
     ],
     "9a9b7efe": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "0d3e6114": [
-      3,
-      13
+      2,
+      11
     ],
     "34e4516a": [
-      5,
-      15
-    ],
-    "c98036cc": [
-      5,
-      15
-    ],
-    "34a0790b": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "7fdb7fb5": [
-      5,
-      15
-    ],
-    "81cd08f8": [
-      5,
-      15
-    ],
-    "10b17756": [
-      5,
-      15
-    ],
-    "4f055832": [
-      5,
-      15
-    ],
-    "2188eb98": [
-      5,
-      15
-    ],
-    "18838ce9": [
-      3,
+      4,
       13
-    ],
-    "221d4281": [
-      5,
-      15
-    ],
-    "bfe36e56": [
-      5,
-      15
-    ],
-    "875da2ac": [
-      5,
-      15
-    ],
-    "101dff2c": [
-      5,
-      15
-    ],
-    "5e313c00": [
-      5,
-      15
-    ],
-    "ad9956c6": [
-      5,
-      15
-    ],
-    "6f3e6c9e": [
-      5,
-      15
-    ],
-    "05f1de0e": [
-      1,
-      0
-    ],
-    "13c3232f": [
-      1,
-      0
-    ],
-    "5791cd7d": [
-      10,
-      11
-    ],
-    "465781db": [
-      5,
-      15
-    ],
-    "3f42717b": [
-      5,
-      15
-    ],
-    "b9846196": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "6b8c837a": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "7bcb24ff": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "613b49c4": [
-      3,
-      13
-    ],
-    "12b206eb": [
-      5,
-      15
-    ],
-    "89fb6bd2": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "dc1820b2": [
-      5,
-      15
-    ],
-    "d0e584b6": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "11d68e4a": [
-      5,
-      15
-    ],
-    "5aa4bacd": [
-      5,
-      15
-    ],
-    "0df0c25c": [
-      5,
-      15
-    ],
-    "783222fc": [
-      5,
-      15
-    ],
-    "53c08b51": [
-      5,
-      15
-    ],
-    "a12394e4": [
-      5,
-      15
-    ],
-    "d0c9aaca": [
-      5,
-      15
     ],
     "5e6084f1": [
-      2,
-      12
+      9,
+      10
     ],
-    "64342bc4": [
+    "035ed791": [
+      4,
+      13
+    ],
+    "c98036cc": [
+      4,
+      13
+    ],
+    "34a0790b": [
       5,
+      7,
+      14,
       15
     ],
-    "7ba0ad3b": [
+    "7fdb7fb5": [
+      4,
+      13
+    ],
+    "81cd08f8": [
+      4,
+      13
+    ],
+    "10b17756": [
+      4,
+      13
+    ],
+    "4f055832": [
+      4,
+      13
+    ],
+    "2188eb98": [
+      4,
+      13
+    ],
+    "18838ce9": [
+      2,
+      11
+    ],
+    "221d4281": [
+      4,
+      13
+    ],
+    "bfe36e56": [
+      4,
+      13
+    ],
+    "875da2ac": [
+      4,
+      13
+    ],
+    "101dff2c": [
+      4,
+      13
+    ],
+    "5e313c00": [
+      4,
+      13
+    ],
+    "ad9956c6": [
+      4,
+      13
+    ],
+    "6f3e6c9e": [
+      4,
+      13
+    ],
+    "5791cd7d": [
       1,
       0
     ],
-    "0e9655f0": [
+    "465781db": [
+      4,
+      13
+    ],
+    "3f42717b": [
+      4,
+      13
+    ],
+    "b9846196": [
       5,
+      7,
+      14,
       15
     ],
-    "40391c11": [
+    "6b8c837a": [
       5,
+      7,
+      14,
       15
     ],
-    "4a90a558": [
+    "7bcb24ff": [
       5,
+      7,
+      14,
       15
     ],
-    "2d9a3e8f": [
-      5,
-      15
-    ],
-    "1b032524": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "211d48d0": [
-      10,
+    "613b49c4": [
+      2,
       11
     ],
-    "3fef53a4": [
+    "12b206eb": [
+      4,
+      13
+    ],
+    "89fb6bd2": [
       5,
+      7,
+      14,
       15
+    ],
+    "1782ad8e": [
+      1,
+      0
+    ],
+    "dc1820b2": [
+      4,
+      13
+    ],
+    "d0e584b6": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "11d68e4a": [
+      4,
+      13
+    ],
+    "5aa4bacd": [
+      4,
+      13
+    ],
+    "0df0c25c": [
+      4,
+      13
+    ],
+    "783222fc": [
+      4,
+      13
+    ],
+    "53c08b51": [
+      4,
+      13
+    ],
+    "a12394e4": [
+      4,
+      13
+    ],
+    "552f7151": [
+      9,
+      10
+    ],
+    "d0c9aaca": [
+      4,
+      13
+    ],
+    "64342bc4": [
+      4,
+      13
+    ],
+    "0e9655f0": [
+      4,
+      13
+    ],
+    "40391c11": [
+      4,
+      13
+    ],
+    "4a90a558": [
+      4,
+      13
+    ],
+    "2d9a3e8f": [
+      4,
+      13
+    ],
+    "1b032524": [
+      5,
+      7,
+      14,
+      15
+    ],
+    "211d48d0": [
+      1,
+      0
+    ],
+    "3fef53a4": [
+      4,
+      13
     ],
     "a29f4cc0": [
-      2,
-      12
+      9,
+      10
     ],
     "12dacd30": [
-      5,
-      15
+      4,
+      13
     ],
     "598b1454": [
-      5,
-      15
+      4,
+      13
     ],
     "7bb2f2a6": [
-      5,
-      15
+      4,
+      13
     ],
     "17a3572a": [
-      5,
-      15
+      4,
+      13
     ],
     "7d28890e": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "3a08e68b": [
-      6,
-      8,
-      16,
-      17
-    ],
-    "035ed791": [
       5,
+      7,
+      14,
       15
     ],
     "9c7e6144": [
-      5,
-      15
+      4,
+      13
     ],
     "3d17873c": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
+    ],
+    "419a6216": [
+      9,
+      10
     ],
     "56f40203": [
-      5,
-      15
+      4,
+      13
     ],
     "1134af74": [
-      5,
-      15
+      4,
+      13
     ],
     "122d8377": [
-      5,
-      15
+      4,
+      13
     ],
     "1d47a54c": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "038fbdd3": [
-      5,
-      15
+      4,
+      13
     ],
     "ef940b1a": [
-      2,
-      12
+      9,
+      10
     ],
     "395407e2": [
-      4,
-      14
+      3,
+      12
     ],
     "d712336a": [
-      5,
-      15
+      4,
+      13
     ],
     "95b36600": [
-      5,
-      15
+      4,
+      13
     ],
     "28fd2dbf": [
-      5,
-      15
+      4,
+      13
     ],
     "d93d7826": [
-      6,
-      8,
-      16,
-      17
+      5,
+      7,
+      14,
+      15
     ],
     "7b4ec17d": [
-      5,
-      15
+      4,
+      13
     ],
     "4bbab687": [
-      5,
-      15
+      4,
+      13
     ],
     "5fda5646": [
-      5,
-      15
+      4,
+      13
     ],
     "4da865c8": [
-      5,
-      15
+      4,
+      13
+    ],
+    "78bd2b16": [
+      1,
+      0
     ],
     "6e072836": [
-      5,
-      15
+      4,
+      13
     ],
     "731a9af9": [
-      5,
-      15
+      4,
+      13
     ],
     "d3f085b2": [
-      10,
-      11
+      1,
+      0
     ]
   }
 }
