--- a/prod/server/package.json
+++ b/prod/server/package.json
@@ -14,7 +14,7 @@
     "firebase-admin": "^5.0.1",
     "firebase-functions": "^0.6.1",
     "lodash": "^4.17.4",
-    "nuxt": "^1.0.0-rc3",
+    "nuxt": "latest",
     "vue": "~2.4.2",
     "vue-meta": "^1.0.5",
     "vue-router": "^2.7.0",
