--- a/src/package.json
+++ b/src/package.json
@@ -14,7 +14,7 @@
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
     "es6-promise": "^4.1.1",
-    "nuxt": "^1.0.0-rc3",
+    "nuxt": "latest",
     "vuetify": "^0.14.8"
   },
   "devDependencies": {
@@ -29,6 +29,8 @@
     "eslint-plugin-node": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-standard": "^3.0.1",
+    "node-sass": "^4.5.3",
+    "sass-loader": "^6.0.6",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.1"
   },
