--- a/prod/client/assets/vue-ssr-client-manifest.json
+++ b/prod/client/assets/vue-ssr-client-manifest.json
@@ -1,89 +1,97 @@
 {
   "publicPath": "/assets/",
   "all": [
-    "pages/Admin.cc2b307c85d6fb1cff3b.js.map",
-    "pages/Admin.cc2b307c85d6fb1cff3b.js",
-    "layouts/default.09895e60f28f7cb63fe1.js",
+    "common.f03fc83b0370b4f5c262.js.map",
+    "pages/Admin.7a05b6626ba30c67ce24.js",
+    "layouts/default.fa89462ac537131991c5.js",
     "pages/About.fed67c0ad5c05c5b5dbd.js",
-    "common.ce3975c3edfbe1dc212a.js",
-    "app.3d3df279fd1206b625e4.js",
-    "manifest.c34b29e3410a1f051a54.js",
-    "common.5ab027af26eb5942cd68685db0ef24d4.css",
+    "common.f03fc83b0370b4f5c262.js",
+    "app.e7f78a63b03ef8beee22.js",
+    "manifest.ad63f6a86dac537e73e9.js",
+    "common.94bcc32b9dbf7bb21e009fcad05060bc.css",
     "LICENSES",
-    "pages/index.345ab8caeac79008ae3e.js",
+    "pages/Admin.7a05b6626ba30c67ce24.js.map",
     "pages/index.345ab8caeac79008ae3e.js.map",
-    "layouts/default.09895e60f28f7cb63fe1.js.map",
+    "layouts/default.fa89462ac537131991c5.js.map",
     "pages/About.fed67c0ad5c05c5b5dbd.js.map",
-    "common.ce3975c3edfbe1dc212a.js.map",
-    "app.3d3df279fd1206b625e4.js.map",
-    "common.5ab027af26eb5942cd68685db0ef24d4.css.map",
-    "manifest.c34b29e3410a1f051a54.js.map",
+    "pages/index.345ab8caeac79008ae3e.js",
+    "app.e7f78a63b03ef8beee22.js.map",
+    "common.94bcc32b9dbf7bb21e009fcad05060bc.css.map",
+    "manifest.ad63f6a86dac537e73e9.js.map",
+    "icons/icon_16.d00bMwo0t0c.png",
+    "icons/icon_120.d00bMwo0t0c.png",
+    "icons/icon_144.d00bMwo0t0c.png",
+    "icons/icon_152.d00bMwo0t0c.png",
+    "icons/icon_192.d00bMwo0t0c.png",
+    "icons/icon_384.d00bMwo0t0c.png",
+    "icons/icon_512.d00bMwo0t0c.png",
+    "manifest.431f607e.json",
     "index.spa.html",
     "index.ssr.html"
   ],
   "initial": [
-    "manifest.c34b29e3410a1f051a54.js",
-    "common.ce3975c3edfbe1dc212a.js",
-    "app.3d3df279fd1206b625e4.js"
+    "manifest.ad63f6a86dac537e73e9.js",
+    "common.f03fc83b0370b4f5c262.js",
+    "app.e7f78a63b03ef8beee22.js"
   ],
   "async": [
-    "pages/Admin.cc2b307c85d6fb1cff3b.js",
-    "layouts/default.09895e60f28f7cb63fe1.js",
+    "pages/Admin.7a05b6626ba30c67ce24.js",
+    "layouts/default.fa89462ac537131991c5.js",
     "pages/About.fed67c0ad5c05c5b5dbd.js",
     "pages/index.345ab8caeac79008ae3e.js"
   ],
   "modules": {
     "34743616": [
       4,
-      13
+      0
     ],
     "71787424": [
       4,
-      13
+      0
     ],
     "c9a5df2a": [
       4,
-      13
+      0
     ],
     "929ff236": [
       1,
-      0
+      9
     ],
     "5c7e4673": [
       1,
-      0
+      9
     ],
     "cb10d370": [
       4,
-      13
+      0
     ],
     "5dea6790": [
       4,
-      13
+      0
     ],
     "8693773e": [
       4,
-      13
+      0
     ],
     "aca5fa7a": [
       4,
-      13
+      0
     ],
     "88a08fd8": [
-      9,
+      13,
       10
     ],
     "2d74c3ea": [
       4,
-      13
+      0
     ],
     "37ed05fa": [
       4,
-      13
+      0
     ],
     "2e99d4d9": [
       4,
-      13
+      0
     ],
     "2dc825e8": [
       2,
@@ -91,23 +99,29 @@
     ],
     "a8827e0c": [
       4,
-      13
+      0
     ],
     "91bcd71c": [
-      9,
+      13,
       10
+    ],
+    "e977cad8": [
+      5,
+      7,
+      14,
+      15
     ],
     "d0c51f14": [
       4,
-      13
+      0
     ],
     "45b7eb92": [
       4,
-      13
+      0
     ],
     "645e2f7a": [
       4,
-      13
+      0
     ],
     "51c06cff": [
       5,
@@ -117,11 +131,11 @@
     ],
     "d2aa02c4": [
       4,
-      13
+      0
     ],
     "8eea9102": [
       4,
-      13
+      0
     ],
     "55076fc8": [
       5,
@@ -131,55 +145,51 @@
     ],
     "18a16dd6": [
       4,
-      13
+      0
     ],
     "0b1e29b4": [
       4,
-      13
+      0
     ],
     "2e4edf5a": [
       4,
-      13
+      0
     ],
     "0625339c": [
       4,
-      13
+      0
     ],
     "255c3176": [
-      9,
+      13,
       10
     ],
     "9bbbeb60": [
       1,
-      0
-    ],
-    "05bd1b99": [
-      4,
-      13
+      9
     ],
     "eaa652e0": [
       4,
-      13
+      0
     ],
     "3ee2a62a": [
       4,
-      13
+      0
     ],
     "10a45c9c": [
       4,
-      13
+      0
     ],
     "3fa0e569": [
       4,
-      13
+      0
     ],
     "d29f67d2": [
       1,
-      0
+      9
     ],
     "d7684e34": [
       4,
-      13
+      0
     ],
     "64e53e12": [
       5,
@@ -189,7 +199,7 @@
     ],
     "106740b1": [
       4,
-      13
+      0
     ],
     "1369fd2f": [
       3,
@@ -197,39 +207,39 @@
     ],
     "ce20da44": [
       4,
-      13
+      0
     ],
     "a923acd0": [
       4,
-      13
+      0
     ],
     "099f05dc": [
       1,
-      0
+      9
     ],
     "474cfc8d": [
       4,
-      13
+      0
     ],
     "2bafea54": [
       4,
-      13
+      0
     ],
     "229837bb": [
       4,
-      13
+      0
     ],
     "bd292434": [
       1,
-      0
+      9
     ],
     "9a6232ee": [
       4,
-      13
+      0
     ],
     "5e59e63e": [
       4,
-      13
+      0
     ],
     "fd0d1fe0": [
       5,
@@ -239,11 +249,11 @@
     ],
     "bc1c6616": [
       4,
-      13
+      0
     ],
     "0b6f5a36": [
       4,
-      13
+      0
     ],
     "4cee839d": [
       5,
@@ -253,11 +263,11 @@
     ],
     "3eedab15": [
       4,
-      13
+      0
     ],
     "33827e83": [
       4,
-      13
+      0
     ],
     "52236eff": [
       5,
@@ -267,7 +277,7 @@
     ],
     "7aa6c412": [
       1,
-      0
+      9
     ],
     "13e20794": [
       5,
@@ -277,15 +287,19 @@
     ],
     "32bdd064": [
       4,
-      13
+      0
     ],
     "dd2a659a": [
       4,
-      13
+      0
     ],
     "9e9d0166": [
       4,
-      13
+      0
+    ],
+    "7ef22bdc": [
+      1,
+      9
     ],
     "7b4b049a": [
       5,
@@ -295,31 +309,35 @@
     ],
     "a892edc0": [
       4,
-      13
+      0
     ],
     "5b38d5f6": [
       4,
-      13
+      0
     ],
     "e0419134": [
       4,
-      13
+      0
+    ],
+    "88d647da": [
+      1,
+      9
     ],
     "7173bfb7": [
       4,
-      13
+      0
     ],
     "1e8496cc": [
       4,
-      13
+      0
     ],
     "7f97e162": [
-      9,
+      13,
       10
     ],
     "64b938ef": [
       4,
-      13
+      0
     ],
     "7d56f4d2": [
       5,
@@ -329,23 +347,23 @@
     ],
     "67afb57c": [
       4,
-      13
+      0
     ],
     "172d717a": [
       4,
-      13
+      0
     ],
     "d0d2c236": [
       4,
-      13
+      0
     ],
     "49785cd6": [
       4,
-      13
+      0
     ],
     "107d77e7": [
       4,
-      13
+      0
     ],
     "5e7ea45c": [
       5,
@@ -359,27 +377,23 @@
     ],
     "680456e0": [
       4,
-      13
+      0
     ],
     "2cf2d4ea": [
       4,
-      13
+      0
     ],
     "0df04838": [
       4,
-      13
+      0
     ],
     "02033b56": [
       4,
-      13
-    ],
-    "e36b6966": [
-      1,
       0
     ],
     "e077cf3e": [
       4,
-      13
+      0
     ],
     "7c45b238": [
       5,
@@ -389,15 +403,15 @@
     ],
     "14f34f34": [
       4,
-      13
+      0
     ],
     "a73b0450": [
       4,
-      13
+      0
     ],
     "0482b3e4": [
       4,
-      13
+      0
     ],
     "f7583e16": [
       5,
@@ -406,56 +420,60 @@
       15
     ],
     "562e2e12": [
-      9,
+      13,
       10
     ],
     "5e092e02": [
       1,
-      0
+      9
     ],
     "fe60a9f2": [
       4,
-      13
+      0
     ],
     "0483c257": [
       4,
-      13
+      0
     ],
     "a37e642c": [
       4,
-      13
+      0
     ],
     "fed496f4": [
       4,
-      13
+      0
     ],
     "cbae1bd6": [
       4,
-      13
+      0
     ],
     "870ab4d8": [
       4,
-      13
+      0
     ],
     "26b50220": [
       4,
-      13
+      0
     ],
     "1ecb6ea4": [
       4,
-      13
+      0
+    ],
+    "2f428b6c": [
+      1,
+      9
     ],
     "6d8bd947": [
       4,
-      13
+      0
     ],
     "0f4c669a": [
       4,
-      13
+      0
     ],
     "2438e970": [
       4,
-      13
+      0
     ],
     "31467ad4": [
       5,
@@ -471,7 +489,7 @@
     ],
     "1499d10a": [
       4,
-      13
+      0
     ],
     "9d102996": [
       5,
@@ -481,7 +499,7 @@
     ],
     "2028ebc9": [
       4,
-      13
+      0
     ],
     "1c0379e3": [
       5,
@@ -491,15 +509,15 @@
     ],
     "4698d11c": [
       4,
-      13
+      0
     ],
     "5681189a": [
       4,
-      13
+      0
     ],
     "b25e5a00": [
       4,
-      13
+      0
     ],
     "43bdf916": [
       5,
@@ -509,11 +527,11 @@
     ],
     "64912bf1": [
       1,
-      0
+      9
     ],
     "cf22443c": [
       4,
-      13
+      0
     ],
     "3fd493d2": [
       5,
@@ -523,7 +541,7 @@
     ],
     "0a15f7a6": [
       4,
-      13
+      0
     ],
     "0b1b5941": [
       5,
@@ -545,23 +563,23 @@
     ],
     "2be03ee2": [
       4,
-      13
+      0
     ],
     "0e30fa5b": [
       4,
-      13
+      0
     ],
     "0579d661": [
       4,
-      13
+      0
     ],
     "a85f3f76": [
       4,
-      13
+      0
     ],
     "36ad6d92": [
       4,
-      13
+      0
     ],
     "7870e0a3": [
       5,
@@ -571,15 +589,19 @@
     ],
     "456916c8": [
       4,
-      13
+      0
+    ],
+    "210e79e0": [
+      4,
+      0
     ],
     "73dd295e": [
       4,
-      13
+      0
     ],
     "5c01d15c": [
       4,
-      13
+      0
     ],
     "175a852f": [
       5,
@@ -589,31 +611,35 @@
     ],
     "4d926c57": [
       4,
-      13
+      0
     ],
     "4ebf2f56": [
       4,
-      13
+      0
+    ],
+    "057edab1": [
+      1,
+      9
     ],
     "4154936e": [
       4,
-      13
+      0
     ],
     "9fa47a64": [
       4,
-      13
+      0
     ],
     "87d12d60": [
       4,
-      13
+      0
     ],
     "7d7ac104": [
       4,
-      13
+      0
     ],
     "062cd7d7": [
       4,
-      13
+      0
     ],
     "9a9b7efe": [
       5,
@@ -627,19 +653,11 @@
     ],
     "34e4516a": [
       4,
-      13
-    ],
-    "5e6084f1": [
-      9,
-      10
-    ],
-    "035ed791": [
-      4,
-      13
+      0
     ],
     "c98036cc": [
       4,
-      13
+      0
     ],
     "34a0790b": [
       5,
@@ -649,23 +667,23 @@
     ],
     "7fdb7fb5": [
       4,
-      13
+      0
     ],
     "81cd08f8": [
       4,
-      13
+      0
     ],
     "10b17756": [
       4,
-      13
+      0
     ],
     "4f055832": [
       4,
-      13
+      0
     ],
     "2188eb98": [
       4,
-      13
+      0
     ],
     "18838ce9": [
       2,
@@ -673,43 +691,51 @@
     ],
     "221d4281": [
       4,
-      13
+      0
     ],
     "bfe36e56": [
       4,
-      13
+      0
     ],
     "875da2ac": [
       4,
-      13
+      0
     ],
     "101dff2c": [
       4,
-      13
+      0
     ],
     "5e313c00": [
       4,
-      13
+      0
     ],
     "ad9956c6": [
       4,
-      13
+      0
     ],
     "6f3e6c9e": [
       4,
-      13
+      0
+    ],
+    "0dcfe0fa": [
+      1,
+      9
+    ],
+    "6708158e": [
+      1,
+      9
     ],
     "5791cd7d": [
       1,
-      0
+      9
     ],
     "465781db": [
       4,
-      13
+      0
     ],
     "3f42717b": [
       4,
-      13
+      0
     ],
     "b9846196": [
       5,
@@ -723,6 +749,10 @@
       14,
       15
     ],
+    "035ed791": [
+      4,
+      0
+    ],
     "7bcb24ff": [
       5,
       7,
@@ -735,7 +765,7 @@
     ],
     "12b206eb": [
       4,
-      13
+      0
     ],
     "89fb6bd2": [
       5,
@@ -743,13 +773,9 @@
       14,
       15
     ],
-    "1782ad8e": [
-      1,
-      0
-    ],
     "dc1820b2": [
       4,
-      13
+      0
     ],
     "d0e584b6": [
       5,
@@ -759,55 +785,63 @@
     ],
     "11d68e4a": [
       4,
-      13
+      0
     ],
     "5aa4bacd": [
       4,
-      13
+      0
     ],
     "0df0c25c": [
       4,
-      13
+      0
     ],
     "783222fc": [
       4,
-      13
+      0
     ],
     "53c08b51": [
       4,
-      13
+      0
     ],
     "a12394e4": [
       4,
-      13
+      0
     ],
     "552f7151": [
-      9,
+      13,
       10
     ],
     "d0c9aaca": [
       4,
-      13
+      0
+    ],
+    "5e6084f1": [
+      13,
+      10
     ],
     "64342bc4": [
       4,
-      13
+      0
+    ],
+    "aca7c3f2": [
+      1,
+      9
     ],
     "0e9655f0": [
       4,
-      13
+      0
     ],
     "40391c11": [
       4,
-      13
+      0
     ],
     "4a90a558": [
       4,
-      13
+      0
     ],
     "2d9a3e8f": [
       4,
-      13
+      0
     ],
     "1b032524": [
       5,
@@ -817,31 +851,31 @@
     ],
     "211d48d0": [
       1,
-      0
+      9
     ],
     "3fef53a4": [
       4,
-      13
+      0
     ],
     "a29f4cc0": [
-      9,
+      13,
       10
     ],
     "12dacd30": [
       4,
-      13
+      0
     ],
     "598b1454": [
       4,
-      13
+      0
     ],
     "7bb2f2a6": [
       4,
-      13
+      0
     ],
     "17a3572a": [
       4,
-      13
+      0
     ],
     "7d28890e": [
       5,
@@ -857,7 +891,7 @@
     ],
     "9c7e6144": [
       4,
-      13
+      0
     ],
     "3d17873c": [
       5,
@@ -866,20 +900,20 @@
       15
     ],
     "419a6216": [
-      9,
+      13,
       10
     ],
     "56f40203": [
       4,
-      13
+      0
     ],
     "1134af74": [
       4,
-      13
+      0
     ],
     "122d8377": [
       4,
-      13
+      0
     ],
     "1d47a54c": [
       5,
@@ -889,10 +923,10 @@
     ],
     "038fbdd3": [
       4,
-      13
+      0
     ],
     "ef940b1a": [
-      9,
+      13,
       10
     ],
     "395407e2": [
@@ -901,15 +935,15 @@
     ],
     "d712336a": [
       4,
-      13
+      0
     ],
     "95b36600": [
       4,
-      13
+      0
     ],
     "28fd2dbf": [
       4,
-      13
+      0
     ],
     "d93d7826": [
       5,
@@ -919,35 +953,35 @@
     ],
     "7b4ec17d": [
       4,
-      13
+      0
     ],
     "4bbab687": [
       4,
-      13
+      0
     ],
     "5fda5646": [
       4,
-      13
+      0
     ],
     "4da865c8": [
       4,
-      13
+      0
     ],
     "78bd2b16": [
       1,
-      0
+      9
     ],
     "6e072836": [
       4,
-      13
+      0
     ],
     "731a9af9": [
       4,
-      13
+      0
     ],
     "d3f085b2": [
       1,
-      0
+      9
     ]
   }
 }
