--- a/prod/server/package.json
+++ b/prod/server/package.json
@@ -2,18 +2,22 @@
   "name": "functions",
   "description": "Cloud Functions for Firebase",
   "dependencies": {
+    "@google-cloud/storage": "^1.2.1",
     "axios": "^0.16.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-stage-0": "^6.24.1",
     "babel-runtime": "^6.23.0",
+    "busboy": "^0.2.14",
     "clone": "^2.1.1",
     "cors": "^2.8.4",
     "debug": "^2.6.8",
     "es6-promise": "^4.1.1",
     "express": "^4.15.4",
+    "express-fileupload": "^0.2.0",
     "firebase-admin": "^5.0.1",
     "firebase-functions": "^0.6.1",
     "lodash": "^4.17.4",
+    "multer": "^1.3.0",
     "nuxt": "latest",
     "vue": "~2.4.2",
     "vue-meta": "^1.0.5",
